--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <title>Care Bears</title>
 </head>
 <body>
-    
+    <div id="container">
+        <div class="box" id="0"><p>Care Bears</p></div>
+        <div class="box" id="1"><img src="assets/item1.png" alt="" id="item1"></div>
+        <div class="box" id="2"><img src="assets/item2.png" alt="" id="item2"></div>
+        <div class="box" id="3"><img src="assets/item3.png" alt="" id="item3"></div>
+        <div class="box" id="4"><img src="assets/item4.png" alt="" id="item4"></div>
+        <div class="box" id="5"><img src="assets/item5.png" alt="" id="item5"></div>
+        <div class="box" id="6"><img src="assets/item6.png" alt="" id="item6"></div>
+        <div class="box" id="7"><img src="assets/item7.png" alt="" id="item7"></div>
+        <div class="box" id="8"><img src="assets/item8.png" alt="" id="item8"></div>
+        <div class="box" id="9"><img src="assets/item9.png" alt="" id="item9"></div>
+        <div class="box" id="10"><img src="assets/item10.png" alt="" id="item10"></div>
+    </div>
 </body>
 </html>
