--- a/index.html
+++ b/index.html
@@ -4,21 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <title>Care Bears</title>
 </head>
 <body>
     <div id="container">
-        <div class="box" id="0"><p>Care Bears</p></div>
-        <div class="box" id="1"><img src="assets/item1.png" alt="" id="item1"></div>
-        <div class="box" id="2"><img src="assets/item2.png" alt="" id="item2"></div>
-        <div class="box" id="3"><img src="assets/item3.png" alt="" id="item3"></div>
-        <div class="box" id="4"><img src="assets/item4.png" alt="" id="item4"></div>
-        <div class="box" id="5"><img src="assets/item5.png" alt="" id="item5"></div>
-        <div class="box" id="6"><img src="assets/item6.png" alt="" id="item6"></div>
-        <div class="box" id="7"><img src="assets/item7.png" alt="" id="item7"></div>
-        <div class="box" id="8"><img src="assets/item8.png" alt="" id="item8"></div>
-        <div class="box" id="9"><img src="assets/item9.png" alt="" id="item9"></div>
-        <div class="box" id="10"><img src="assets/item10.png" alt="" id="item10"></div>
+        <div class="mediumbox" id="box0"><p class="title">Care Bears</p></div>
+        <div class="mediumbox" id="box1"></div>
+        <div class="smallbox" id="box2"></div>
+        <div class="smallbox" id="box3"></div>
+        <div class="smallbox" id="box4"></div>
+        <div class="smallbox" id="box5"></div>
+        <div class="box" id="box6"></div>
+        <div class="smallbox" id="box7"></div>
+        <div class="smallbox" id="box8"></div>
+        <div class="smallbox" id="box9"></div>
+        <div class="box" id="box10"><img src="assets/item10.png" alt="" id="item10"></div>
     </div>
 </body>
 </html>
