--- a/index.html
+++ b/index.html
@@ -10,18 +10,34 @@
     <title>Care Bears</title>
 </head>
 <body>
-    <div id="container">
-        <div class="mediumbox" id="box0"><p class="title">Care Bears</p></div>
-        <div class="mediumbox" id="box1"></div>
-        <div class="smallbox" id="box2"></div>
-        <div class="smallbox" id="box3"></div>
-        <div class="smallbox" id="box4"></div>
-        <div class="smallbox" id="box5"></div>
-        <div class="box" id="box6"></div>
-        <div class="smallbox" id="box7"></div>
-        <div class="smallbox" id="box8"></div>
-        <div class="smallbox" id="box9"></div>
-        <div class="box" id="box10"><img src="assets/item10.png" alt="" id="item10"></div>
+    <div id="maincontainer">
+        <div id="main_top">
+            <div class="subcontainer" id="top">
+                <div class="mediumbox" id="box0"><p class="title">Care Bears</p></div>
+                <div class="mediumbox" id="box1"></div>
+            </div>
+        </div>
+        <div id="main_bottom">
+            <div id="inner_bottom">
+                <div id="inner_left">
+                    <div class="subcontainer" id="left">
+                        <div class="smallbox" id="box2"></div>
+                        <div class="smallbox" id="box3"></div>
+                        <div class="box" id="box6"></div>
+                        <div class="smallbox" id="box8"></div>
+                        <div class="smallbox" id="box9"></div>
+                    </div>
+                </div>
+                <div id="inner_right">
+                    <div class="subcontainer" id="right">
+                        <div class="box" id="box4"></div>
+                        <div class="smallbox" id="box5"></div>
+                        <div class="smallbox" id="box7"></div>
+                        <div class="box" id="box10"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
